Modified 'Triangulation' interface and added new 'BasicTriangulation' implementation class to support primitives (triangle sets, triangle strips, triangle fans).